--- a/packages/shylu/shylu_dd/frosch/test/SolverFactory/CMakeLists.txt
+++ b/packages/shylu/shylu_dd/frosch/test/SolverFactory/CMakeLists.txt
@@ -14,14 +14,14 @@ ParameterLists
 IF(HAVE_SHYLU_DDFROSCH_EPETRA AND NOT Tpetra_DefaultNode STREQUAL "Kokkos::Compat::KokkosCudaWrapperNode")
 TRIBITS_ADD_TEST(
 solverfactory
-NAME test_solverfactory_klu_DIM2_EPETRA
+NAME test_solverfactory_amesos2_klu_DIM2_EPETRA
 ARGS "--DIM=2 --PLIST=ParameterLists/ParameterList_Amesos2_Klu.xml --USEEPETRA"
 COMM mpi
 NUM_MPI_PROCS 1
 )
 TRIBITS_ADD_TEST(
 solverfactory
-NAME test_solverfactory_klu_DIM3_EPETRA
+NAME test_solverfactory_amesos2_klu_DIM3_EPETRA
 ARGS "--DIM=3 --PLIST=ParameterLists/ParameterList_Amesos2_Klu.xml --USEEPETRA"
 COMM mpi
 NUM_MPI_PROCS 1
@@ -30,15 +30,51 @@ ENDIF()
 ##Tpetra
 TRIBITS_ADD_TEST(
 solverfactory
-NAME test_solverfactory_klu_DIM2_TPETRA
+NAME test_solverfactory_amesos2_klu_DIM2_TPETRA
 ARGS "--DIM=2 --PLIST=ParameterLists/ParameterList_Amesos2_Klu.xml --USETPETRA"
 COMM mpi
 NUM_MPI_PROCS 1
 )
 TRIBITS_ADD_TEST(
 solverfactory
-NAME test_solverfactory_klu_DIM3_TPETRA
+NAME test_solverfactory_amesos2_klu_DIM3_TPETRA
 ARGS "--DIM=3 --PLIST=ParameterLists/ParameterList_Amesos2_Klu.xml --USETPETRA"
+COMM mpi
+NUM_MPI_PROCS 1
+)
+
+###############
+# Belos GMRES #
+###############
+## Epetra
+IF(HAVE_SHYLU_DDFROSCH_EPETRA AND NOT Tpetra_DefaultNode STREQUAL "Kokkos::Compat::KokkosCudaWrapperNode")
+TRIBITS_ADD_TEST(
+solverfactory
+NAME test_solverfactory_belos_gmres_DIM2_EPETRA
+ARGS "--DIM=2 --PLIST=ParameterLists/ParameterList_Belos_GMRES.xml --USEEPETRA"
+COMM mpi
+NUM_MPI_PROCS 1
+)
+TRIBITS_ADD_TEST(
+solverfactory
+NAME test_solverfactory_belos_gmres_DIM3_EPETRA
+ARGS "--DIM=3 --PLIST=ParameterLists/ParameterList_Belos_GMRES.xml --USEEPETRA"
+COMM mpi
+NUM_MPI_PROCS 1
+)
+ENDIF()
+##Tpetra
+TRIBITS_ADD_TEST(
+solverfactory
+NAME test_solverfactory_belos_gmres_DIM2_TPETRA
+ARGS "--DIM=2 --PLIST=ParameterLists/ParameterList_Belos_GMRES.xml --USETPETRA"
+COMM mpi
+NUM_MPI_PROCS 1
+)
+TRIBITS_ADD_TEST(
+solverfactory
+NAME test_solverfactory_belos_gmres_DIM3_TPETRA
+ARGS "--DIM=3 --PLIST=ParameterLists/ParameterList_Belos_GMRES.xml --USETPETRA"
 COMM mpi
 NUM_MPI_PROCS 1
 )
