--- a/packages/shylu/shylu_dd/frosch/test/SolverFactory/ParameterLists/CMakeLists.txt
+++ b/packages/shylu/shylu_dd/frosch/test/SolverFactory/ParameterLists/CMakeLists.txt
@@ -1,5 +1,8 @@
 TRIBITS_COPY_FILES_TO_BINARY_DIR(SolverFactoryCopyFiles
-DEST_FILES ParameterList_Amesos2_Klu.xml
+DEST_FILES ParameterList_Amesos_Klu.xml
+           ParameterList_Amesos2_Klu.xml
+           ParameterList_Belos_GMRES.xml
+           ParameterList_Ifpack2_RILUK.xml
            ParameterList_ThyraPreconditioner_FROSch_OneLevelPreconditioner.xml
            ParameterList_ThyraSolver_Belos_GMRES.xml
 SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
