Add SuperLUDist to the Intel 17 PR build/test
This will help keep superLUDist working. The
version available from sems (5.2.2) is older
than the one in use in ATDM (5.4) and we will
need to upgrade when possible.

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -277,6 +277,7 @@ module-load sems-intel: 17.0.1
 module-load sems-mpich: 3.2
 use SEMS-DEFAULT:
 module-remove sems-openmpi:
+module-load sems-superlu_dist: 5.2.2/64bit_parallel
 use ATDM-DEFAULT:
 setenv LDFLAGS: -lifcore
 
