Tpetra: Add WrappedDualView to handle syncs/modifies

--- a/packages/tpetra/core/test/Utils/CMakeLists.txt
+++ b/packages/tpetra/core/test/Utils/CMakeLists.txt
@@ -1,5 +1,14 @@
 
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  TpetraUtils_WrappedDualView
+  SOURCES
+    TpetraUtils_WrappedDualView
+  ARGS ${ARGS}
+  COMM serial mpi
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
   TpetraUtils_UnitTests
   SOURCES
     TpetraUtils_UnitTests
