Modernize for newer CMake and fix compile error (#8498)
This now builds without errors with Clang 10.0.

* Require CMake 3.17.1 which is the same minimum now required by Trilinos

* Updated the documentation to use Markdown and use raw CMake and no do-cmake
  script

* Deleted unneccasary do-cmake script

* Deleted usage of a 'Trilinos_PREFIX' var and just use built-in CMake var
  CMAKE_PREFIX_PATH directly as documented in CMake documentation for
  'find_package()'

* Turned off warning from Kokkos about not suupporting C++ extensions

* Fixed build error with the source code usage of Teuchos

--- a/demos/buildAgainstTrilinos/CMakeLists.txt
+++ b/demos/buildAgainstTrilinos/CMakeLists.txt
@@ -1,11 +1,9 @@
 # CMAKE File for "MyApp" application building against an installed Trilinos
 
-cmake_minimum_required(VERSION 2.7)
+cmake_minimum_required(VERSION 3.17.1)
 
-# Use Trilinos_PREFIX, if the user set it, to help find Trilinos.
-# The final location will actually be held in Trilinos_DIR which must
-# point at "<prefix>/lib/cmake/Trilinos", but this helps the search.
-SET(CMAKE_PREFIX_PATH ${Trilinos_PREFIX} ${CMAKE_PREFIX_PATH})
+# Disable Kokkos warning about not supporting C++ extensions
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Get Trilinos as one entity
 FIND_PACKAGE(Trilinos REQUIRED)
@@ -72,4 +70,3 @@ ADD_SUBDIRECTORY(src)
 #Turn on test to be run by ctest
 ENABLE_TESTING()
 ADD_SUBDIRECTORY(test)
-
