Eliminate duplication in tests and set PROCESSORS property (#8498)
If one is going to demonstrate how to use CTest one should also show good
software engineering practicies like minimizing duplication.

I also set the PROCESSORS property so that ctest -j<N>.

--- a/demos/buildAgainstTrilinos/test/CMakeLists.txt
+++ b/demos/buildAgainstTrilinos/test/CMakeLists.txt
@@ -1,11 +1,20 @@
 # Run tests in parallel iff MPI enabled 
 IF (MYAPP_MPI)
-  set(MPIGO mpiexec -np 4)
+  set(NUM_MPI_PROCS 4)
+  set(MPIGO mpiexec -np ${NUM_MPI_PROCS})
 ELSE()
-  set(MPIGO  )
+  set(MPIGO "")
 ENDIF()
 
-set(MyTest.exe ${MPIGO} ${MyApp_BINARY_DIR}/src/MyApp.exe)
+function(add_app_test)
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.xml
+    ${CMAKE_CURRENT_BINARY_DIR}/input.xml COPYONLY)
+  get_filename_component(testName ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+  add_test(${testName} ${MPIGO} ${MyApp_BINARY_DIR}/src/MyApp.exe)
+  if (MYAPP_MPI)
+    set_tests_properties(${testName} PROPERTIES PROCESSORS ${NUM_MPI_PROCS})
+  endif()
+endfunction()
 
 # Add test problem subdirectories. Can be conditional on build
 add_subdirectory(ex1)
