Ctest: Adding ascicgpu tests

--- a/cmake/ctest/drivers/ascicgpu031/CMakeLists.txt
+++ b/cmake/ctest/drivers/ascicgpu031/CMakeLists.txt
@@ -12,6 +12,22 @@ TRILINOS_DRIVER_ADD_DASHBOARD(
   )
 
 
+TRILINOS_DRIVER_ADD_DASHBOARD(
+  RELEASE_CUDA_UVM_NODEPRECATED
+  ctest_linux_nightly_mpi_release_uvm_nodeprecated_ascicgpu031.cmake
+  CTEST_INSTALLER_TYPE release
+  RUN_SERIAL
+  TIMEOUT_MINUTES 420
+  )
+
+TRILINOS_DRIVER_ADD_DASHBOARD(
+  RELEASE_CUDA_UVM_DEPRECATED
+  ctest_linux_nightly_mpi_release_uvm_deprecated_ascicgpu031.cmake
+  CTEST_INSTALLER_TYPE release
+  RUN_SERIAL
+  TIMEOUT_MINUTES 420
+  )
+
 
 
 
