Updated files for refactor

--- a/packages/rol/rol2/src/CMakeLists.txt
+++ b/packages/rol/rol2/src/CMakeLists.txt
@@ -1,5 +1,4 @@
 include(TribitsLibraryMacros)
-
 #
 # A) Package-specific configuration options
 #
@@ -7,23 +6,25 @@ include(TribitsLibraryMacros)
 #TRIBITS_CONFIGURE_FILE(${PACKAGE_NAME}_config.h)
 yellow("ROL source directory:  ${ROL_SRC}")
 
+set(ROL_FUNCTION  ${ROL_SRC}/function       )
+set(ROL_OBJECTIVE ${ROL_FUNCTION}/objective )
+set(ROL_OPERATOR  ${ROL_FUNCTION}/operator  )
+
+
+
+
 set(ROL2_SRC   ${CMAKE_CURRENT_SOURCE_DIR})
 yellow("ROL2 source directory:  ${ROL2_SRC}")
 
-
+set(ROL2_VECTOR      ${ROL2_SRC}/vector      )
 set(ROL2_ALGORITHM   ${ROL2_SRC}/algorithm   )
 set(ROL2_ELEMENTWISE ${ROL2_SRC}/elementwise )
 set(ROL2_FUNCTION    ${ROL2_SRC}/function    )
+
+set(ROL2_OBJECTIVE   ${ROL2_FUNCTION}/objective )
+set(ROL2_OPERATIOR   ${ROL2_FUNCTION}/operator  )
+
 set(ROL2_UTILS       ${ROL2_SRC}/utils       )
-set(ROL2_VECTOR      ${ROL2_SRC}/vector      )
-
-#
-# B) Define the header and source files (and directories)
-#
-
-#
-# src
-#
 
 set(HEADERS "")
 set(SOURCES "")
@@ -31,9 +32,6 @@ set(SOURCES "")
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-#
-# All headers
-#
 
 include_directories( ${ROL2_SRC}   )
 APPEND_GLOB( HEADERS ${ROL2_SRC}/ROL2.hpp )
@@ -44,14 +42,8 @@ APPEND_GLOB( HEADERS ${ROL2_UTILS}/*.hpp )
 include_directories( ${ROL2_ELEMENTWISE} )
 APPEND_GLOB( HEADERS ${ROL2_ELEMENTWISE}/*.hpp )
 
-#APPEND_GLOB( HEADERS ${ROL2_UTILS}/ROL_Utilities.hpp )
-#APPEND_GLOB( HEADERS ${ROL2_UTILS}/ROL_TypeTraits.hpp )
-#APPEND_GLOB( HEADERS ${ROL2_UTILS}/ROL2_FoldExpressions.hpp )
-#APPEND_GLOB( HEADERS ${ROL2_UTILS}/ROL2_Ptr.hpp )
-#APPEND_GLOB( HEADERS ${ROL2_UTILS}/ROL2_ParameterList.hpp )
-#APPEND_GLOB( HEADERS ${ROL2_UTILS}/ROL2_Stream_Decl.hpp )
-#APPEND_GLOB( HEADERS ${ROL2_UTILS}/ROL2_Stream_Def.hpp )
-
+include_directories( ${ROL2_VECTOR} )
+APPEND_GLOB( HEADERS ${ROL2_VECTOR}/*.hpp )
 
 bold_blue("List of headers")
 foreach(H ${HEADERS})
