--- a/packages/rol/rol2/CMakeLists.txt
+++ b/packages/rol/rol2/CMakeLists.txt
@@ -11,7 +11,12 @@ include( Dependencies )
 bold_white("CMAKE_MODULE_PATH = ${CMAKE_MODULE_PATH}")
 set( ROL_HOME  ${PACKAGE_SOURCE_DIR})
 set( ROL2_HOME ${CMAKE_CURRENT_SOURCE_DIR})
-set( ROL_SRC ${ROL_HOME}/src )
+
+set( ROL_SRC  ${ROL_HOME}/src )
+set( ROL2_SRC ${ROL2_HOME}/src )
+
+# Set Test Problem directories
+set( ROL2_TYPEU_TESTPROBLEMS ${ROL2_SRC}/algorithm/TypeU/testproblems )
 
 bold_green("\nConfiguring to use ROL2")
 #yellow("ROL root directory:  ${ROL_HOME}") 
@@ -19,5 +24,6 @@ bold_green("\nConfiguring to use ROL2")
 
 add_subdirectory(src)
 add_subdirectory(test)
+
 
 
