Move the TPETRA_ASSUME_CUDA_AWARE_MPI to the environment
It looks like the trilinos_jsrun is not getting
CMake variables settings (of course) so I am moving
this into the environemnt settings.

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -378,6 +378,7 @@ setenv OMPI_FC: gfortran
 setenv TRILINOS_DIR: ${WORKSPACE}/Trilinos
 setenv CUDA_LAUNCH_BLOCKING: 1
 setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
+setenv TPETRA_ASSUME_CUDA_AWARE_MPI: 1
 setenv PATH_TMP: /projects/atdm_devops/vortex/cmake-3.17.2/bin:${PATH}
 setenv PATH:     /projects/atdm_devops/vortex/ninja-fortran-1.8.2:${PATH_TMP}
 unsetenv PATH_TMP:
