tpetra:  adding auto-testing for Crs branch

--- a/cmake/ctest/drivers/ascicgpu031/CMakeLists.txt
+++ b/cmake/ctest/drivers/ascicgpu031/CMakeLists.txt
@@ -1,8 +1,5 @@
 TRILINOS_DRIVER_SETUP()
 
-
-
-
 TRILINOS_DRIVER_ADD_DASHBOARD(
   RELEASE_CUDA_NO_UVM
   ctest_linux_nightly_mpi_release_nouvm_ascicgpu031.cmake
@@ -28,7 +25,13 @@ TRILINOS_DRIVER_ADD_DASHBOARD(
   TIMEOUT_MINUTES 420
   )
 
-
+TRILINOS_DRIVER_ADD_DASHBOARD(
+  DEBUG_CUDA_NO_UVM_CRS
+  ctest_linux_nightly_mpi_release_nouvm_crs_ascicgpu031.cmake
+  CTEST_INSTALLER_TYPE debug
+  RUN_SERIAL
+  TIMEOUT_MINUTES 420
+  )
 
 
 TRILINOS_ADD_REQUIRED_CMAKE_INSTALLS()
