Fixed type warnings and removed some unnecessary KokkosKernels changes. Also made ParMETIS tests conditional on whether ParMETIS is present in the build.

--- a/packages/zoltan2/test/core/color/CMakeLists.txt
+++ b/packages/zoltan2/test/core/color/CMakeLists.txt
@@ -63,6 +63,9 @@ TRIBITS_ADD_TEST(
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
+
+IF (${PACKAGE_NAME}_ENABLE_ParMETIS)
+
 TRIBITS_ADD_TEST(
   Coloring1
   NAME Coloring1_simple_D1_rows
@@ -85,6 +88,8 @@ TRIBITS_ADD_TEST(
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
 
+ENDIF()
+
 TRIBITS_ADD_TEST(
   Coloring1
   NAME Coloring1_commanchedual_D1
@@ -95,6 +100,8 @@ TRIBITS_ADD_TEST(
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
+
+IF (${PACKAGE_NAME}_ENABLE_ParMETIS)
 
 TRIBITS_ADD_TEST(
   Coloring1
@@ -117,6 +124,8 @@ TRIBITS_ADD_TEST(
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
+
+ENDIF()
 
 TRIBITS_ADD_TEST(
   Coloring1
@@ -173,6 +182,8 @@ TRIBITS_ADD_TEST(
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
 
+IF (${PACKAGE_NAME}_ENABLE_ParMETIS)
+
 TRIBITS_ADD_TEST(
   Coloring1
   NAME Coloring1_simple_D1-2GL_rows
@@ -195,6 +206,8 @@ TRIBITS_ADD_TEST(
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
 
+ENDIF()
+
 TRIBITS_ADD_TEST(
   Coloring1
   NAME Coloring1_commanchedual_D1-2GL
@@ -205,6 +218,8 @@ TRIBITS_ADD_TEST(
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
+
+IF (${PACKAGE_NAME}_ENABLE_ParMETIS)
 
 TRIBITS_ADD_TEST(
   Coloring1
@@ -227,6 +242,8 @@ TRIBITS_ADD_TEST(
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
+
+ENDIF()
 
 TRIBITS_ADD_TEST(
   Coloring1
@@ -282,13 +299,15 @@ TRIBITS_ADD_TEST(
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
 
+IF (${PACKAGE_NAME}_ENABLE_ParMETIS)
+
 TRIBITS_ADD_TEST(
   Coloring1
   NAME Coloring1_simple_D2_rows
   NUM_MPI_PROCS 4
   COMM serial mpi
   ARGS
-   "--inputFile=simple --colorMethod=D2 --prepartition=rows --verbose"
+   "--inputFile=simple --colorMethod=D2 --prepartition=rows"
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
@@ -299,10 +318,12 @@ TRIBITS_ADD_TEST(
   NUM_MPI_PROCS 4
   COMM serial mpi
   ARGS
-   "--inputFile=simple --colorMethod=D2 --prepartition=nonzeros --verbose"
+   "--inputFile=simple --colorMethod=D2 --prepartition=nonzeros"
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
+
+ENDIF()
 
 TRIBITS_ADD_TEST(
   Coloring1
@@ -314,6 +335,8 @@ TRIBITS_ADD_TEST(
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
+
+IF (${PACKAGE_NAME}_ENABLE_ParMETIS)
 
 TRIBITS_ADD_TEST(
   Coloring1
@@ -336,6 +359,8 @@ TRIBITS_ADD_TEST(
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
+
+ENDIF()
 
 TRIBITS_ADD_TEST(
   Coloring1
@@ -392,6 +417,8 @@ TRIBITS_ADD_TEST(
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
 
+IF (${PACKAGE_NAME}_ENABLE_ParMETIS)
+
 TRIBITS_ADD_TEST(
   Coloring1
   NAME Coloring1_simple_PD2_rows
@@ -414,6 +441,8 @@ TRIBITS_ADD_TEST(
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
 
+ENDIF()
+
 TRIBITS_ADD_TEST(
   Coloring1
   NAME Coloring1_commanchedual_PD2
@@ -424,6 +453,8 @@ TRIBITS_ADD_TEST(
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
+
+IF (${PACKAGE_NAME}_ENABLE_ParMETIS)
 
 TRIBITS_ADD_TEST(
   Coloring1
@@ -446,6 +477,8 @@ TRIBITS_ADD_TEST(
   PASS_REGULAR_EXPRESSION "PASS"
   FAIL_REGULAR_EXPRESSION "FAIL"
   )
+
+ENDIF()
 
 TRIBITS_ADD_TEST(
   Coloring1
