Revert "Changes in rol/src/elementwise:"
This reverts commit 5f7e72d116493b52d9bdc63ae9151f271981ff77.

--- a/packages/rol/adapters/kokkos/src/CMakeLists.txt
+++ b/packages/rol/adapters/kokkos/src/CMakeLists.txt
@@ -30,23 +30,12 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 #
 
 IF (ROL_ENABLE_Kokkos) 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/vector)
-  APPEND_SET(HEADERS
-    vector/ROL_KokkosVector.hpp
-    vector/ROL_KokkosVector_decl.hpp
-    vector/ROL_KokkosVector_def.hpp
-  )
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/elementwise)
-  APPEND_SET(HEADERS
-   elementwise/ROL_Kokkos_UnaryFunctions_decl.hpp
-   elementwise/ROL_Kokkos_UnaryFunctions_def.hpp
-  )
-#  SET_AND_INC_DIRS( DIR ${CMAKE_CURRENT_SOURCE_DIR}/elementwise )
-#  SET_AND_INC_DIRS( DIR ${CMAKE_CURRENT_SOURCE_DIR}/vector )
-#  INCLUDE_DIRECTORIES( ${DIR} )
-#  APPEND_GLOB(HEADERS ${DIR}/*.hpp)
+
+  SET_AND_INC_DIRS( DIR ${CMAKE_CURRENT_SOURCE_DIR}/vector )
+  INCLUDE_DIRECTORIES( ${DIR} )
+  APPEND_GLOB(HEADERS ${DIR}/*.hpp)
+
+
 ENDIF()
-
-
 
 INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/${${PROJECT_NAME}_INSTALL_INCLUDE_DIR})
