--- a/packages/shylu/shylu_dd/bddc/CMakeLists.txt
+++ b/packages/shylu/shylu_dd/bddc/CMakeLists.txt
@@ -3,7 +3,11 @@ TRIBITS_SUBPACKAGE(BDDC)
       
 ADD_SUBDIRECTORY(src)
 
-TRIBITS_ADD_TEST_DIRECTORIES(test)
+IF (Trilinos_ENABLE_Gtest)
+  TRIBITS_ADD_TEST_DIRECTORIES(test)
+ELSE()
+  MESSAGE(STATUS "BDDC disables tests as Trilinos disables Gtest")   
+ENDIF()
 
 TRIBITS_ADD_EXAMPLE_DIRECTORIES(example)
 
